responsive work on feed done

--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -1,3 +1,11 @@
 .feedContainer{
     margin:0 200px ;
 }
+.btnMargin{
+    margin-left: 320px;
+}
+@media screen and (max-width: 567px) {
+    .feedContainer{
+    margin:0;
+}
+}
